--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,15 @@ header{
 header .flex-box{
     height: 100%;
     align-items:flex-end;
+    justify-content: flex-end;
 }
 
 #logo{
-    height: 150px;
-    width: 160px;
+    float: left;
+    height: 140px;
+    width: 150px;
     font-family: 'Great Vibes', cursive;
     border: 1.5px pink solid;
-    
     border-radius: 50%;
     /* padding-top: 25px;
     color: pink;
@@ -58,6 +59,7 @@ nav{
     /* border:2px black solid;  */
     display:flex;
     align-items: flex-end;
+    
   
      
 }
@@ -66,10 +68,11 @@ nav{
     text-decoration: none;
     color: rgb(128, 65, 6);
     height: 50px;
-    padding-left:2em;
+    padding: 0 1em;
     align-items: center;
     font-family: 'Parisienne', cursive;
     font-size: 1.5em;
+    
     
     
 
